fix look when dark mode preference is set (#32)
* ensure text is always dark

* enable dark mode

* use celo icon

* lock firebase version since 9.17 has a bug

* update words

* fix font and input , remove unused classes

* remove unused css vars

--- a/apps/web/styles/Home.module.css
+++ b/apps/web/styles/Home.module.css
@@ -22,6 +22,7 @@
 }
 
 .card {
+  color: var(--foreground-rgb);
   text-align: left;
   font-size: 1rem;
   padding: 1rem 1.2rem;
@@ -48,7 +49,7 @@
 
 .card p {
   margin: 0;
-  opacity: 0.6;
+  opacity: 0.85;
   font-size: 0.9rem;
   line-height: 1.5;
   max-width: 30ch;
@@ -63,6 +64,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  text-align: center;
 }
 
 .container {
