--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -12,71 +12,28 @@
   --fig: #1E002B;
 
   --foreground-rgb: var(--fig);
+  --button-hover: var(--prosperity-yellow);
   --background-start-rgb: var(--sand);
   --background-end-rgb: var(--sand);
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0c192633 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --outline-color: var(--wood);
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: var(--gypsum);
+    --background-start-rgb: var(--fig);
+    --background-end-rgb:  var(--fig);
+    --button-hover: var(--wood);
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --outline-color: var(--prosperity-yellow);
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
+
   }
 }
 
@@ -86,15 +43,22 @@
   margin: 0;
 }
 
+:active, :focus, :focus-visible {
+  outline-width: 1px;
+  outline-offset: 1px;
+  outline-color: var(--outline-color);
+}
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  color: #000;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: var(--sand)
+  color: var(--foreground-rgb);
+  background: var(--background-start-rgb)
 }
 
 a {
@@ -110,25 +74,26 @@ a {
 
 label {
   font-size: 1.2rem;
-  font-family: "Inter";
+  font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
 input {
   font-size: large;
-  padding: 0.5rem 1rem;
-  border: .1rem solid rgba(0,0,0,.2);
+  padding: 0.45rem .5rem;
+  border: .1rem solid  var(--foreground-rgb);
   background-color: transparent;
   border-radius: 2.4rem;
 }
 
 button {
+  color: var(--foreground-rgb);
   font-size: 1.25rem;
-  border: .1rem solid rgba(0,0,0,.2);
+  border: .1rem solid  var(--foreground-rgb);
   border-radius: 2.4rem;
   padding: 0.5rem 1.5rem;
   background-color: transparent;
 }
 
 button:hover {
-  background-color: var(--prosperity-yellow);
+  background-color: var(--button-hover);
 }
